# cpsc453-hw3

./: CMakeLists.txt  README.md  gen_glsl_cpp.sh
inc/: font.hpp  objmodel.hpp  opengl.hpp  shader.hpp  shaderimpl.hpp  texture.hpp  vertex.hpp  window.hpp  world.hpp
scenes/: chessboard.scn  coffee_cup.scn  knight.scn
shaders/: fragment_fixed.glsl  fragment_font.glsl  fragment_normal.glsl  fragment_phong.glsl  fragment_textured.glsl  geometry_point.glsl  vertex_simple.glsl  vertex_textured.glsl  vertex_textured_normal.glsl
src/: font.cpp  main.cpp  objmodel.cpp  shader.cpp  shaderimpl.cpp  texture.cpp  vertex.cpp  window.cpp  world.cpp
